--- a/index.html
+++ b/index.html
@@ -7,14 +7,36 @@
     <title>My First Page</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h4>Julia V.</h4>
 
-    <!--This is a commentary-->
-    <!--Let's add an image!-->
-    <img src="img/lara.jpg"/>
+    <table border="1">
+        <!--tr - table row-->
+        <tr>
+            <!--td - table datacells-->
+            <td><img src="img/lara.jpg" style="width: 200px"/></td>
+            <td>
+                <h1>Julia Vrn.</h1>
+                <p>Awesome Web Developer</p>
+                <p>I &#9829 coffee and JavaScript</p>
+            </td>
+        </tr>
+    </table>
+    
+    <h3>My Favorite IT Subjects</h3>
+    <!--ul - unordered List-->
+    <ul>
+        <!--li - list item-->
+        <li>Web Development</li>
+        <li>Android Development</li>
+        <li>Multimedia</li>
+    </ul>
 
-    <p>Julia Vrn. &#169 2020</p>
+    <h3>Hobbies</h3>
+    <!--ol - ordered list-->
+    <ol>
+        <li><a href="photo.html" target="blank">Photography</a></li>
+        <li><a href="cooking.html" target="blank"></a></li>
+        <li><a href="candy.html" target="blank">Candy Crush</a></li>
+    </ol>
     
 </body>
 </html>
