--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--ol - ordered list-->
     <ol>
         <li><a href="photo.html" target="blank">Photography</a></li>
-        <li><a href="cooking.html" target="blank"></a></li>
+        <li><a href="cooking.html" target="blank">Cooking</a></li>
         <li><a href="candy.html" target="blank">Candy Crush</a></li>
     </ol>
     
